tests/mm0_mmu/fail/bad-sort3142.mm0
-- bad modifier order
provable pure free strict sort s3142;